# cyber-ai-project-template

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/: RECORDING_SCRIPT.md  WALKTHROUGH.md
demos/captured/: request.json  response.json  terminal-session.txt  trace.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  demo-data.md  design-patterns.md
scripts/: run_demo.py  seed_demo_data.py
src/agents/: __init__.py
src/api/: main.py
src/llm/: factory.py
src/tools/: __init__.py
src/ui/: streamlit_app.py
tests/: __init__.py  test_llm_factory.py
